--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Bot de Discord para reproducir música de YouTube y Spotify",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -25,10 +26,20 @@
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.11",
+    "play-dl": "^1.9.7",
     "spotify-web-api-node": "^5.0.2",
     "youtube-search-api": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "pkg": {
+    "targets": [
+      "node18-win-x64"
+    ],
+    "outputPath": "dist",
+    "assets": [
+      "commands/**/*"
+    ]
   }
 }
