--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.15.0",
     "@distube/ytdl-core": "^4.16.12",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
@@ -28,6 +29,7 @@
     "libsodium-wrappers": "^0.7.11",
     "play-dl": "^1.9.7",
     "spotify-web-api-node": "^5.0.2",
+    "tweetnacl": "^1.0.3",
     "youtube-search-api": "^1.2.0"
   },
   "devDependencies": {
