--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.11",
+    "node-opus": "^0.3.3",
+    "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
+    "sodium-native": "^5.0.8",
     "spotify-web-api-node": "^5.0.2",
     "tweetnacl": "^1.0.3",
     "youtube-search-api": "^1.2.0"
